--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ a {
 }
 
 .nav {
-  position: sticky;
+  /*position: sticky;*/
   width: 100%;
   height: 7rem;
   background-image: url(../images/nav-bg.png);
@@ -790,17 +790,17 @@ a {
   }
 }
 
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
-  }
-  70% {
-    box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
-  }
-  100% {
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
-}
+/*@keyframes pulse {*/
+/*  0% {*/
+/*    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);*/
+/*  }*/
+/*  70% {*/
+/*    box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);*/
+/*  }*/
+/*  100% {*/
+/*    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);*/
+/*  }*/
+/*}*/
 
 .projects_section {
   margin-top: 50rem;
